<resources>
    <string name="app_name">NatureX</string>
	<string name="back">Back</string>
	<string name="viewList">View List</string>
	<string name="create">Create</string>
	<string name="createNew">Create New</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="send">Send</string>
	<string name="settings">Settings</string>
	<string name="contact">Contact</string>
	<string name="subject">Subject</string>
	<string name="message">Message: </string>
	<string name="location">Location</string>
	<string name="name">Name</string>
	<string name="description">Description</string>
	<string name="rating">Rating</string>
</resources>
