<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ubbcluj.cs.naturex.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/createTabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="@+id/button">

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back" />

            </android.support.design.widget.TabLayout>

            <EditText
                android:id="@+id/createLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/location" />

            <EditText
                android:id="@+id/createName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name" />
				
			<EditText
                android:id="@+id/createDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/description" />

            <NumberPicker
                android:id="@+id/createRating"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/rating"/>

            <Button
                android:id="@+id/createDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
