<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ubbcluj.cs.naturex.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/listLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/viewListTabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="@+id/button">

                <android.support.design.widget.TabItem
                    android:id="@+id/contactTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact" />

                <android.support.design.widget.TabItem
                    android:id="@+id/viewListTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewList" />

            </android.support.design.widget.TabLayout>

			<Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createNew" />

            <ListView
                android:id="@+id/myList"
                android:layout_width="match_parent"
                android:layout_height="464dp" />
				
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
